fix buttons homepage banner on mobile

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4285,7 +4285,7 @@ body.dark-mode #cta-403.cs-image-only{
       .cs-form {
         width: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: flex-start;
         gap: (12/16rem);
@@ -4404,6 +4404,9 @@ body.dark-mode #cta-403.cs-image-only{
     }
     .cs-domain-check{
         right: (200/16rem);
+    }
+    .cs-form {
+      flex-direction: row;
     }
   }
 }
